certdog/service.yml
apiVersion: v1
kind: Service
metadata:
  name: certdog-https
  namespace: certdog
spec:
  selector:
    app: certdog
  ports:
    - name: certdog-https
      port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ClusterIP
