certdog/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: certdog
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: certdog
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                port:
                  number: 443
                name: certdog-https
            path: /
            pathType: Prefix
      host: certdog.home.lab
